# aria

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.backend  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  entity-relationship.txt  fix_lint.py  fix_lint2.py  fix_lint3.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scheme.sql  seed_database.py  write_client.py  write_components.py  write_customers_and_fix_cases.py  write_frontend2.py  write_main.py  write_routes.py
.claude/: launch.json
backend/: __init__.py  agent.py  audit.py  db.py  main.py  models.py  rbac.py
contracts/: agent_proposal.schema.json  agent_run_request.schema.json  mcp_request_envelope.schema.json  mcp_response_envelope.schema.json  phase1_tool_catalog.json  phase3_audit_event.schema.json  phase3_mcp_request_envelope.schema.json  phase3_mcp_response_envelope.schema.json  phase3_policy_decision.schema.json  phase3_scope_expansion_policy.schema.json  phase3_tool_catalog.json  phase3_tool_metadata.schema.json
docker/: backend-entrypoint.sh
docs/: adoption.md  adr-001-sidecar-monolith.md  agent-intelligence-plan-v1.md  agent-intelligence-plan-v2-progress.md  agent-intelligence-plan-v2.md  agent-intelligence-progress-v1.md  agent-intelligence-progress.md  agent-loop.md  architecture.md  banking-integration.md  data-contract.md  how-it-works.md  mcp-contract-phase3.md  phase1-contracts.md  production-readiness.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
(+122 files in other folders)
