[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-aml-compliance-sidecar"
version = "0.1.0"
description = "Read-only AML investigation sidecar with auditable agent outputs"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "psycopg2-binary",
  "python-dotenv",
  "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compliance_agent = ["py.typed"]
