[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-aml"
version = "0.1.0"
description = "Aria AML risk intelligence sidecar with auditable agent outputs"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "mcp",
  "uvicorn[standard]",
  "psycopg2-binary",
  "python-dotenv",
  "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compliance_agent = ["py.typed"]
